web: add public session directory
